{
    "name": "PlayerActionControls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "ca960391-4744-4199-8134-bd92c6b81911",
            "actions": [
                {
                    "name": "VerticalMovement",
                    "type": "PassThrough",
                    "id": "378173bb-0e9b-4244-a6aa-a3620be43a7d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HorizontalMovement",
                    "type": "Button",
                    "id": "4ed25a0a-323f-4da2-aac5-6a2f7eada922",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerFacing",
                    "type": "PassThrough",
                    "id": "f7bcf6c9-433e-42ad-b7fc-a11c942da173",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerFireWeapon",
                    "type": "PassThrough",
                    "id": "2c5bb378-bb9a-4dc2-b9cb-7041f53723e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "PassThrough",
                    "id": "b27e2951-9176-40e1-885f-a40ea7eedf16",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "PassThrough",
                    "id": "4acae279-8db6-4704-944e-1dee748bf3b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "PassThrough",
                    "id": "7380b79f-c5bf-4863-9144-08d3fd8e66a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Map",
                    "type": "PassThrough",
                    "id": "93297546-14a9-4780-aad1-f1585f57f7f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "79601d5b-c0db-4ab1-88a7-7bdf53f6f900",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnemyDefensiveWeapon",
                    "type": "PassThrough",
                    "id": "e944a2e2-fbd3-46e9-b6c0-17f0ad587e2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "VerticalMovement",
                    "id": "1a67c3e8-855e-4ea3-8d22-08c3086ff7db",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fb802515-5136-4319-a474-2b1fcc76fd07",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Movement",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7cf89da6-8da5-4709-bcb6-2afa544b1ff5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Movement",
                    "action": "VerticalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "HorizontalMovement",
                    "id": "438e8024-418b-4f59-b8e0-6731fc00470c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "89520363-fc7d-4299-9a21-da6581b05500",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Movement",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5f5739be-35d0-4475-83b8-7a0b9c11ee3b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Movement",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1b39727c-0382-45b2-a005-d65414cac22a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerFacing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa840f3a-fd55-489a-a6af-62dc9413e7f1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerFireWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30a35ed5-33c0-4157-ad41-ea8bd768c3da",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f3ca38a2-29e3-4463-b459-79ce7b84d1c7",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "939ec1c3-46e8-48d8-8886-b3f0540b2f0f",
                    "path": "<Keyboard>/i",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fc96c6d-10b3-4678-b642-23289eff44c6",
                    "path": "<Keyboard>/m",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16cb132a-2cc1-470d-a94f-9325e2b9fa91",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a928e95f-2af7-4695-a7d0-700dd9fc8822",
                    "path": "<Keyboard>/f",
                    "interactions": "Press(pressPoint=1.401298E-45,behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78ebaf7d-e8a5-4b21-baca-76e63184a7ca",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "EnemyDefensiveWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "DebugControls",
            "id": "c863753c-5e3f-4886-b3b6-bf7f46a8e3bf",
            "actions": [
                {
                    "name": "HealthLoss",
                    "type": "PassThrough",
                    "id": "27eb98cf-120c-4acd-aa30-4e89c894270d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "486273f0-af5e-41b9-a104-a389a112acc2",
                    "path": "<Keyboard>/o",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "HealthLoss",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}